// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNoteRoute > shows save error when save fails 1`] = `
"
  
<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


    <div class="govuk-error-summary" data-module="govuk-error-summary">
  <div role="alert">
    <h2 class="govuk-error-summary__title">
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
        <ul class="govuk-list govuk-error-summary__list">
          <li>
            There was a problem saving the note. Please try again.
          </li>
        </ul>
    </div>
  </div>
</div>


  <div class="govuk-body">
    
  <div class="govuk-service-navigation" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    <form action="/cases/68495db5afe2d27b09b2ee47/notes" method="post">
      <div class="govuk-form-group">
  <label class="govuk-label govuk-label govuk-label--l govuk-!-margin-top-6" for="text">
    Add a note
  </label>
  <div id="text-hint" class="govuk-hint">
    All notes will be saved for auditing purposes
  </div>
  <textarea class="govuk-textarea" id="text" name="text" rows="5" aria-describedby="text-hint">This will fail to save</textarea>
</div>


      <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
    </form>
  </div>
        "
`;

exports[`createNoteRoute > shows validation error when text is empty 1`] = `
"
  
<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


    <div class="govuk-error-summary" data-module="govuk-error-summary">
  <div role="alert">
    <h2 class="govuk-error-summary__title">
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
        <ul class="govuk-list govuk-error-summary__list">
          <li>
            <a href="#text">You must enter a note</a>
          </li>
        </ul>
    </div>
  </div>
</div>


  <div class="govuk-body">
    
  <div class="govuk-service-navigation" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    <form action="/cases/68495db5afe2d27b09b2ee47/notes" method="post">
      <div class="govuk-form-group govuk-form-group--error">
  <label class="govuk-label govuk-label govuk-label--l govuk-!-margin-top-6" for="text">
    Add a note
  </label>
  <div id="text-hint" class="govuk-hint">
    All notes will be saved for auditing purposes
  </div>
  <p id="text-error" class="govuk-error-message">
    <span class="govuk-visually-hidden">Error:</span> You must enter a note
  </p>
  <textarea class="govuk-textarea govuk-textarea--error" id="text" name="text" rows="5" aria-describedby="text-hint text-error"></textarea>
</div>


      <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
    </form>
  </div>
        "
`;

exports[`createNoteRoute > shows validation error when text is missing 1`] = `
"
  
<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


    <div class="govuk-error-summary" data-module="govuk-error-summary">
  <div role="alert">
    <h2 class="govuk-error-summary__title">
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
        <ul class="govuk-list govuk-error-summary__list">
          <li>
            <a href="#text">You must enter a note</a>
          </li>
        </ul>
    </div>
  </div>
</div>


  <div class="govuk-body">
    
  <div class="govuk-service-navigation" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    <form action="/cases/68495db5afe2d27b09b2ee47/notes" method="post">
      <div class="govuk-form-group govuk-form-group--error">
  <label class="govuk-label govuk-label govuk-label--l govuk-!-margin-top-6" for="text">
    Add a note
  </label>
  <div id="text-hint" class="govuk-hint">
    All notes will be saved for auditing purposes
  </div>
  <p id="text-error" class="govuk-error-message">
    <span class="govuk-visually-hidden">Error:</span> You must enter a note
  </p>
  <textarea class="govuk-textarea govuk-textarea--error" id="text" name="text" rows="5" aria-describedby="text-hint text-error"></textarea>
</div>


      <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
    </form>
  </div>
        "
`;

exports[`createNoteRoute > shows validation error when text is only whitespace 1`] = `
"
  
<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


    <div class="govuk-error-summary" data-module="govuk-error-summary">
  <div role="alert">
    <h2 class="govuk-error-summary__title">
      There is a problem
    </h2>
    <div class="govuk-error-summary__body">
        <ul class="govuk-list govuk-error-summary__list">
          <li>
            <a href="#text">You must enter a note</a>
          </li>
        </ul>
    </div>
  </div>
</div>


  <div class="govuk-body">
    
  <div class="govuk-service-navigation" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    <form action="/cases/68495db5afe2d27b09b2ee47/notes" method="post">
      <div class="govuk-form-group govuk-form-group--error">
  <label class="govuk-label govuk-label govuk-label--l govuk-!-margin-top-6" for="text">
    Add a note
  </label>
  <div id="text-hint" class="govuk-hint">
    All notes will be saved for auditing purposes
  </div>
  <p id="text-error" class="govuk-error-message">
    <span class="govuk-visually-hidden">Error:</span> You must enter a note
  </p>
  <textarea class="govuk-textarea govuk-textarea--error" id="text" name="text" rows="5" aria-describedby="text-hint text-error">   
	  </textarea>
</div>


      <button type="submit" class="govuk-button" data-module="govuk-button">
  Save
</button>
    </form>
  </div>
        "
`;
